--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "barker2",
+  "name": "barker",
+  "version": "1.0.0",
   "description": "final version of baker",
   "main": "index.js",
   "scripts": {
@@ -7,6 +8,8 @@
     "dev": "nodemon server/index.js"
   },
   "dependencies": {
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.6.0",
