--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "dev": "nodemon server/index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
+    "express-validator": "^6.14.2",
     "graphql": "^16.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.3"
   },
   "devDependencies": {
+    "concurrently": "^7.6.0",
     "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
   }
