--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-graphql": "^0.12.0",
     "express-validator": "^6.14.2",
     "graphql": "^16.6.0",
+    "gravatar": "^1.8.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.3"
   },
