--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "express-graphql": "^0.12.0",
     "express-validator": "^6.14.2",
     "graphql": "^16.6.0",
